# ChangeLog for dev-perl/MP3-Tag
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/MP3-Tag/ChangeLog,v 1.31 2009/03/13 12:50:04 tove Exp $

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -MP3-Tag-0.9710.ebuild,
  -MP3-Tag-0.9713.ebuild:
  Cleanup

*MP3-Tag-0.9714 (07 Jan 2009)

  07 Jan 2009; Torsten Veller <tove@gentoo.org> +MP3-Tag-0.9714.ebuild:
  Version bump

*MP3-Tag-0.9713 (31 Oct 2008)

  31 Oct 2008; Torsten Veller <tove@gentoo.org> +MP3-Tag-0.9713.ebuild:
  Version bump

*MP3-Tag-0.9710 (30 Sep 2008)

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -MP3-Tag-0.94.ebuild,
  -MP3-Tag-0.9708.ebuild, MP3-Tag-0.9709.ebuild, +MP3-Tag-0.9710.ebuild:
  Version bump. Cleanup

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> MP3-Tag-0.9709.ebuild:
  amd64 stable

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  MP3-Tag-0.9709.ebuild:
  Stable on ppc.

  22 Jul 2007; Tom Gall <tgall@gentoo.org> MP3-Tag-0.9709.ebuild:
  stable on ppc64

  12 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> MP3-Tag-0.9709.ebuild:
  Stable on sparc

  11 Jul 2007; Raúl Porcel <armin76@gentoo.org> MP3-Tag-0.9709.ebuild:
  ia64/x86 stable

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> MP3-Tag-0.9708.ebuild:
  Stable on ppc64

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> MP3-Tag-0.9708.ebuild:
  Stable on x86, bug #169152.

*MP3-Tag-0.9709 (02 Jan 2007)

  02 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  +MP3-Tag-0.9709.ebuild:
  Version bump

  28 Dec 2006; Javier Villavicencio <the_paya@gentoo.org>
  MP3-Tag-0.9708.ebuild:
  Added ~x86-fbsd keyword.

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  MP3-Tag-0.9708.ebuild:
  ppc stable

  15 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> MP3-Tag-0.9708.ebuild:
  Stable on ia64.

  10 Oct 2006; Michael Cummings <mcummings@gentoo.org> MP3-Tag-0.94.ebuild,
  -MP3-Tag-0.9702.ebuild, -MP3-Tag-0.9704.ebuild, -MP3-Tag-0.9706.ebuild,