@@ -1,9 +1,7 @@
 AUX MP3-Tag-makefile.patch 558 RMD160 b1fc30c3972ebe36e71e1cc61fd7b55e35c8bbec SHA1 0fd6d7256d8f69dd6daef8234cd765f73bb08188 SHA256 d7070773547d4c744ed3c3edcad5cc8f15605a62769c592b57e966e1a45c41fa
-DIST MP3-Tag-0.9710.tar.gz 242025 RMD160 230a038d78559c7d13eae3ef840e701152a48904 SHA1 528c0927077181d48d9d44746dee9dafc41b6f31 SHA256 f0f238eaa176cb6422a56016955c382269feb95d07b28caf323e2e18422116eb
-DIST MP3-Tag-0.9713.tar.gz 258526 RMD160 594910bea783ad5e020bcba0aea4856975bf57e2 SHA1 6f321de0abb77992d0464205b10565cfaea437ba SHA256 04385edd5e7f2e30cb496a3a7dc5d3959953b0bbd4de0aa8c701a2412e79d76b
 DIST MP3-Tag-0.9714.tar.gz 260566 RMD160 6b2d8e1be82917e392415df76275dd18a0e6887c SHA1 8924152e1d8aafa2fd8749ec80517f6c5974681e SHA256 75651bb6f3d670da4911ea1fee23d7c91f4c6a7750ff71bf4d172d63b036c670
-EBUILD MP3-Tag-0.9710.ebuild 532 RMD160 bebab020a9ab67cd376e61ef7f408cb69835ce91 SHA1 7e23dd011272a882e312c6237cb221a14e017b45 SHA256 1d9d1273eb7bcd5ea1053468c73defca2df245e94450c65a2b256f5510a5f1e0
-EBUILD MP3-Tag-0.9713.ebuild 532 RMD160 41c1b29e3d4254d34938440e6fc1ea01836a1fe5 SHA1 93a5570396012139207baacac846ce4f34c2e091 SHA256 27da32b231f1e6dbbb0aaae459959c89fe23b701b6a4abe9e724523b2c4ba7fa
+DIST MP3-Tag-1.11.tar.gz 272544 RMD160 7f9e119397ab310f0c6b82ef847b9b17eebe84ae SHA1 377c5cc6a65eb301d6e8fce649cc13ec8fb8bfaf SHA256 a7e99a6630b919079efdd9b094f8b064b130a0f9dc332255c0acb524a0cc50b8
 EBUILD MP3-Tag-0.9714.ebuild 532 RMD160 d2f7ce01f3e9a416c8f7121f41f01b053b6a4a6d SHA1 1c699df543fd91921114cd00aeb99b18b814156d SHA256 f42675c6cf0fcdf6c04a2c9a23453d9d78acd7cbb42370115f11535fb282b79e
-MISC ChangeLog 4084 RMD160 8bf4e2abbcf2fdfe5ecb3c5628a0db543e2768c0 SHA1 ce1f28309e55d925688a86dd6e3754012d5eabe7 SHA256 6fcaf04778406de42205ec7c1b4abc9e1196c5aebb0ca029e378127e8e8f753d
+EBUILD MP3-Tag-1.11.ebuild 466 RMD160 40921156ae31e312e047af3fd7b2591f64acfc5a SHA1 c13ed9eb078f6a6139e40466d98a960f1f58848b SHA256 d0e78221d0d9e36fa14a188eb3264c2958588e5ba8e6fec7db80c46a47fc776e
+MISC ChangeLog 4199 RMD160 e313d9fcdab4807847a9d3c7abd9b2e555db53bc SHA1 0d70fe733e1dd237ef7d9e7ebb3c4e249886b3c8 SHA256 c47510df0b4a151132c2d6814246fa825751615b32d9c5b6ca43e477e2f3672b
 MISC metadata.xml 178 RMD160 b2dc45d5fe5d1799db2dfea040886ea8106a95cf SHA1 cb6ecb30cc714bc79cb5efa9d24e239a8c755c6a SHA256 1c44b9e69f49c4fba8ff8c657f8c21fb33e4d293965748003e56e96d223faa57
